{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 95,
  "lineage": "8b94aca9-5f8a-3e39-adf8-2cf9596bf574",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03bce26994ee749f4",
            "domain": "vpc",
            "id": "eipalloc-03bce26994ee749f4",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-135-3-43.us-east-2.compute.amazonaws.com",
            "public_ip": "3.135.3.43",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:601584527467:internet-gateway/igw-0087457b2334b0679",
            "id": "igw-0087457b2334b0679",
            "owner_id": "601584527467",
            "tags": {
              "Name": "arc2-igw"
            },
            "tags_all": {
              "Name": "arc2-igw"
            },
            "vpc_id": "vpc-07d9de7158de7193b"
          },
          "dependencies": [
            "aws_vpc.architecture2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03bce26994ee749f4",
            "connectivity_type": "public",
            "id": "nat-0e719fd821da41c44",
            "network_interface_id": "eni-07a1f67b2cf215c8b",
            "private_ip": "172.16.1.243",
            "public_ip": "3.135.3.43",
            "subnet_id": "subnet-057872e30ff1de054",
            "tags": {
              "Name": "nat-gateway"
            },
            "tags_all": {
              "Name": "nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.public-igw",
            "aws_subnet.public-subnet-1",
            "aws_vpc.architecture2-vpc",
            "data.aws_availability_zones.available-in-us-east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04304382beba571a01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e719fd821da41c44",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04304382beba571a0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.public-igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.privateroute",
            "aws_subnet.public-subnet-1",
            "aws_vpc.architecture2-vpc",
            "data.aws_availability_zones.available-in-us-east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0087457b2334b0679",
            "id": "r-rtb-0399213ff2474f7ba1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0399213ff2474f7ba",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.public-igw",
            "aws_route_table.publicroute",
            "aws_vpc.architecture2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:601584527467:route-table/rtb-04304382beba571a0",
            "id": "rtb-04304382beba571a0",
            "owner_id": "601584527467",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d9de7158de7193b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.public-igw",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public-subnet-1",
            "aws_vpc.architecture2-vpc",
            "data.aws_availability_zones.available-in-us-east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:601584527467:route-table/rtb-0399213ff2474f7ba",
            "id": "rtb-0399213ff2474f7ba",
            "owner_id": "601584527467",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d9de7158de7193b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.architecture2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_association3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b4bbbdd5060db5f",
            "route_table_id": "rtb-04304382beba571a0",
            "subnet_id": "subnet-0495ac2f8663621ef"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.public-igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.privateroute",
            "aws_subnet.private-subnet-1",
            "aws_subnet.public-subnet-1",
            "aws_vpc.architecture2-vpc",
            "data.aws_availability_zones.available-in-us-east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_association4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01098cc94c14ca56a",
            "route_table_id": "rtb-04304382beba571a0",
            "subnet_id": "subnet-0b1b2eca20dc07f79"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.public-igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.privateroute",
            "aws_subnet.private-subnet-2",
            "aws_subnet.public-subnet-1",
            "aws_vpc.architecture2-vpc",
            "data.aws_availability_zones.available-in-us-east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab65f1db05082d3e",
            "route_table_id": "rtb-0399213ff2474f7ba",
            "subnet_id": "subnet-057872e30ff1de054"
          },
          "dependencies": [
            "aws_route_table.publicroute",
            "aws_subnet.public-subnet-1",
            "aws_vpc.architecture2-vpc",
            "data.aws_availability_zones.available-in-us-east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f6050c1185814b4",
            "route_table_id": "rtb-0399213ff2474f7ba",
            "subnet_id": "subnet-0d1395a54487aa375"
          },
          "dependencies": [
            "aws_route_table.publicroute",
            "aws_subnet.public-subnet-2",
            "aws_vpc.architecture2-vpc",
            "data.aws_availability_zones.available-in-us-east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:601584527467:subnet/subnet-0495ac2f8663621ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0495ac2f8663621ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "601584527467",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nginx-subnet-1"
            },
            "tags_all": {
              "Name": "nginx-subnet-1"
            },
            "vpc_id": "vpc-07d9de7158de7193b"
          },
          "dependencies": [
            "aws_vpc.architecture2-vpc",
            "data.aws_availability_zones.available-in-us-east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:601584527467:subnet/subnet-0b1b2eca20dc07f79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1b2eca20dc07f79",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "601584527467",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nginx-subnet-2"
            },
            "tags_all": {
              "Name": "nginx-subnet-2"
            },
            "vpc_id": "vpc-07d9de7158de7193b"
          },
          "dependencies": [
            "aws_vpc.architecture2-vpc",
            "data.aws_availability_zones.available-in-us-east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:601584527467:subnet/subnet-057872e30ff1de054",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057872e30ff1de054",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "601584527467",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet_1"
            },
            "tags_all": {
              "Name": "public-subnet_1"
            },
            "vpc_id": "vpc-07d9de7158de7193b"
          },
          "dependencies": [
            "aws_vpc.architecture2-vpc",
            "data.aws_availability_zones.available-in-us-east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:601584527467:subnet/subnet-0d1395a54487aa375",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1395a54487aa375",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "601584527467",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet_2"
            },
            "tags_all": {
              "Name": "public-subnet_2"
            },
            "vpc_id": "vpc-07d9de7158de7193b"
          },
          "dependencies": [
            "aws_vpc.architecture2-vpc",
            "data.aws_availability_zones.available-in-us-east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "architecture2-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:601584527467:vpc/vpc-07d9de7158de7193b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0e59f2cf34b2ffc32",
            "default_route_table_id": "rtb-03a91fa6aa67a6aa5",
            "default_security_group_id": "sg-00157fddf8ff3cd74",
            "dhcp_options_id": "dopt-073d48e28e6b05553",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07d9de7158de7193b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03a91fa6aa67a6aa5",
            "owner_id": "601584527467",
            "tags": {
              "Name": "architecture2-vpc"
            },
            "tags_all": {
              "Name": "architecture2-vpc"
            }
          }
        }
      ]
    }
  ]
}